--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "deprecated-react-native-listview": "0.0.6",
+    "firebase": "^7.6.1",
+    "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-deprecated-custom-components": "^0.1.2",
+    "react-native-device-info": "^5.4.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-paper": "^3.4.0",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-status-bar-height": "^2.4.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3"
