--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -16,6 +16,11 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+# keytool -genkey -v -keystore sarvikaed.keystore -alias sarvikaedkeyalias -keyalg RSA -keysize 2048 -validity 10000
 
 android.useAndroidX=true
 android.enableJetifier=true
+MYAPP_RELEASE_STORE_FILE=keystores/sarvikaed.keystore
+MYAPP_RELEASE_KEY_ALIAS=sarvikaedkeyalias
+MYAPP_RELEASE_STORE_PASSWORD=deepak123
+MYAPP_RELEASE_KEY_PASSWORD=deepak123
