--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'EmployeeDirectory' do
-  # Pods for EmployeeDirectory
+target 'SarvikaED' do
+  # Pods for SarvikaED
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
@@ -34,7 +34,7 @@ target 'EmployeeDirectory' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  target 'EmployeeDirectoryTests' do
+  target 'SarvikaEDTests' do
     inherit! :search_paths
     # Pods for testing
   end
@@ -42,10 +42,10 @@ target 'EmployeeDirectory' do
   use_native_modules!
 end
 
-target 'EmployeeDirectory-tvOS' do
-  # Pods for EmployeeDirectory-tvOS
+target 'SarvikaED-tvOS' do
+  # Pods for SarvikaED-tvOS
 
-  target 'EmployeeDirectory-tvOSTests' do
+  target 'SarvikaED-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
