--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-deprecated-custom-components": "^0.1.2",
     "react-native-device-info": "^5.4.0",
     "react-native-elements": "^1.2.7",
+    "react-native-fast-image": "^7.0.2",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-paper": "^3.4.0",
     "react-native-restart": "0.0.13",
