--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^5.3.3",
     "deprecated-react-native-listview": "0.0.6",
     "firebase": "^7.6.1",
     "native-base": "^2.13.8",
