--- a/ios/SarvikaED.xcodeproj/xcshareddata/xcschemes/SarvikaED.xcscheme
+++ b/ios/SarvikaED.xcodeproj/xcshareddata/xcschemes/SarvikaED.xcscheme
@@ -99,6 +99,12 @@
             ReferencedContainer = "container:SarvikaED.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRAnalyticsDebugEnabled"
+            isEnabled = "NO">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
