--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-splash-screen": "^3.2.0",
     "react-native-status-bar-height": "^2.4.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^8.1.2",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3"
   },
