--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-fast-image": "^7.0.2",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-paper": "^3.4.0",
     "react-native-restart": "0.0.13",
     "react-native-splash-screen": "^3.2.0",
