--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,6 +18,9 @@
 # org.gradle.parallel=true
 # keytool -genkey -v -keystore sarvikaed.keystore -alias sarvikaedkeyalias -keyalg RSA -keysize 2048 -validity 10000
 
+org.gradle.daemon=true
+org.gradle.configureondemand=true
+org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
 MYAPP_RELEASE_STORE_FILE=keystores/sarvikaed.keystore
