--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -215,6 +215,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-vector-icons')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     // add the Firebase SDK for Google Analytics
