--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^2.3.2",
     "@react-native-community/netinfo": "^5.3.3",
     "deprecated-react-native-listview": "0.0.6",
     "firebase": "^7.6.1",
@@ -23,6 +24,7 @@
     "react-native-fast-image": "^7.0.2",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-loading-spinner-overlay": "^1.1.0",
+    "react-native-modal-datetime-picker": "^8.5.4",
     "react-native-paper": "^3.4.0",
     "react-native-restart": "0.0.13",
     "react-native-splash-screen": "^3.2.0",
